# clearpixai

./: .dockerignore  .dockerignore.torchserve  .flake8  .gitignore  CHANGES_INPAINTING.md  Dockerfile  Dockerfile.torchserve  FLORENCE2_ISSUE.md  IMPLEMENTATION_SUMMARY.md  INPAINTING_UPGRADE.md  INSTALL_GROUNDING_SAM.md  MLOPS_IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART.md  QUICKSTART_MLOPS.md  README.md  README_MLOPS.md  README_TRAINING.md  TESTING.md  UPGRADE_SUMMARY.md  check_gpu.sh  compare_backends.py  config.properties  create_torchserve_archive.py  data_validation_report.json  debug_training.py  dvc.yaml  example.sh  export_checkpoint.py  export_torchscript.py  exported_models.dvc  gmon.out  just_file_for_not_epmty_commit  prepare_sample_input.py  prepare_torchserve.sh  pyproject.toml  run.py  sample_input.json  test_sdxl.py  test_yolo_dataset.py  (+5 more)
.dvc/: config
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
checkpoints_kaggle/watermark_yolo/version_0/: events.out.tfevents.1762184149.beleriand.velkerr.ru.1687835.0
checkpoints_kaggle/watermark_yolo/version_1/: events.out.tfevents.1762184200.beleriand.velkerr.ru.1688913.0
checkpoints_kaggle/watermark_yolo/version_10/: events.out.tfevents.1762186149.beleriand.velkerr.ru.1742838.0
checkpoints_kaggle/watermark_yolo/version_11/: events.out.tfevents.1762187208.beleriand.velkerr.ru.1772811.0
checkpoints_kaggle/watermark_yolo/version_12/: events.out.tfevents.1762190823.beleriand.velkerr.ru.1859557.0
checkpoints_kaggle/watermark_yolo/version_13/: events.out.tfevents.1762190858.beleriand.velkerr.ru.1862016.0  hparams.yaml
checkpoints_kaggle/watermark_yolo/version_14/: events.out.tfevents.1762208512.beleriand.velkerr.ru.2238777.0
checkpoints_kaggle/watermark_yolo/version_15/: events.out.tfevents.1762208587.beleriand.velkerr.ru.2240505.0  hparams.yaml
checkpoints_kaggle/watermark_yolo/version_2/: events.out.tfevents.1762184223.beleriand.velkerr.ru.1690192.0
checkpoints_kaggle/watermark_yolo/version_3/: events.out.tfevents.1762185168.beleriand.velkerr.ru.1708750.0
checkpoints_kaggle/watermark_yolo/version_4/: events.out.tfevents.1762185413.beleriand.velkerr.ru.1713371.0
checkpoints_kaggle/watermark_yolo/version_5/: events.out.tfevents.1762185547.beleriand.velkerr.ru.1717739.0
checkpoints_kaggle/watermark_yolo/version_6/: events.out.tfevents.1762185907.beleriand.velkerr.ru.1731732.0
checkpoints_kaggle/watermark_yolo/version_7/: events.out.tfevents.1762185950.beleriand.velkerr.ru.1734253.0
checkpoints_kaggle/watermark_yolo/version_8/: events.out.tfevents.1762185974.beleriand.velkerr.ru.1735677.0
checkpoints_kaggle/watermark_yolo/version_9/: events.out.tfevents.1762186009.beleriand.velkerr.ru.1737903.0
clearpixai/: __init__.py  cli.py  main.py  mask.py  pipeline.py
clearpixai/detection/: __init__.py  base.py  easyocr.py  florence2.py  grounding_sam.py  segmentation.py
clearpixai/inpaint/: __init__.py  base.py  opencv.py  sdxl_inpainter.py  stable_diffusion.py
clearpixai/training/: config.py
clearpixai/training/detector/: README.md  __init__.py  convert_checkpoint.py  dataset.py  export_model.py  model.py  postprocessing.py  prepare_dataset.py  preprocessing.py  test_dataset.py  train.py  train_from_config.py  train_yolo.py  validate.py  validate_data.py  yolo_dataset.py
clearpixai/training/detector/data/: apply_watermarks.py  flat.sh  rename.sh  train.dvc  val.dvc
clearpixai/training/detector/data/kaggle_watermark_data/WatermarkDataset/: watermark.yaml
clearpixai/utils/: random.py
configs/: train_config.yaml
scripts/: prepare_data.py
src/: __init__.py  predict.py
tests/: __init__.py  conftest.py  test_data_validation.py  test_postprocessing.py  test_preprocessing.py
