[project]
name = "clearpixai"
version = "0.1.0"
description = "Simple watermark removal tool using segmentation and diffusion"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "transformers>=4.40.0",
    "diffusers>=0.27.0",
    "accelerate>=0.20.0",
    "safetensors>=0.4.0",
    "segmentation-models-pytorch>=0.3.3",
]

[project.scripts]
clearpixai = "clearpixai.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
