[project]
name = "clearpixai"
version = "0.1.0"
description = "Simple watermark removal tool using segmentation and diffusion"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "transformers>=4.40.0",
    "diffusers>=0.27.0",
    "accelerate>=0.20.0",
    "safetensors>=0.4.0",
    "segmentation-models-pytorch>=0.3.3",
    "pytorch-lightning>=2.5.5",
    "albumentations>=2.0.8",
    "tensorboard>=2.20.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "opencv-python>=4.8.0",
    "dvc-gdrive>=3.0.1",
    "mlflow>=2.0.0",
    "torch-model-archiver>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
clearpixai = "clearpixai.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Black configuration
[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | checkpoints
  | data
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/checkpoints/*", "*/data/*", "*/.venv/*", "*/venv/*"]

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "checkpoints/",
    "data/",
    ".venv/",
    "venv/",
]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "gpu: Tests requiring GPU",
]

# Coverage configuration
[tool.coverage.run]
source = ["clearpixai"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/checkpoints/*",
    "*/data/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
